--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,12 @@
+
+
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
 }
 
 .logo {
@@ -9,11 +15,16 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  /* margin: 0 auto; */
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  gap: 1rem;
+  padding: 0;
+  /* margin: 0; */
 }
 
 a {
