--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -10,9 +10,13 @@ html {
   padding: 16px;
   box-sizing: border-box;
   display: grid;
-  grid-template-columns: 370px 1110px;
-  grid-template-rows: repeat(2, 100px) 500px 100px;
-  gap: 15px;
+  grid-template: 100px 100px 500px 100px / 370px 1100px;
+  grid-template-areas: 
+  "header header"
+  "sidebar nav"
+  "sidebar article"
+  "footer footer";
+  gap: 16px;
 }
 
 .container div {
@@ -26,25 +30,27 @@ html {
 
 .header {
   background-color: #006157;
-  grid-column: span 2;
+  grid-area: header;
 }
 
 .sidebar {
   background-color: #005B94;
-  grid-row: span 2;
+  grid-area: sidebar;
 }
 
 .nav {
   background-color: #642cde;
+  grid-area: nav;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-area: article;
 }
 
 .footer {
   background-color: #393f4d;
-  grid-column: 1 / -1;
+  grid-area: footer;
 }
 
 .article p {
